--- a/pinterest/static/pinterest/css/pins.css
+++ b/pinterest/static/pinterest/css/pins.css
@@ -7,6 +7,7 @@
 
 .pins .pin {
 	flex: 1 0 200px;
+	font-family: 'Helvetica Helvetica Neue', sans-serif;
 	box-sizing: border-box;
 	background: #efefef;
 	color: #555;
