add webpack and babel to frontend

--- a/pinterest/templates/pinterest/base.html
+++ b/pinterest/templates/pinterest/base.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'pinterest/css/pins.css' %}" />
+	<link rel="icon" type="image/png" href="{% static 'pinterest/assets/favicon.ico' %}">
 	<title>{% block title %} Pinmini {% endblock %}</title>
 </head>
 <body>
