--- a/pinterest/templates/pinterest/index.html
+++ b/pinterest/templates/pinterest/index.html
@@ -2,17 +2,18 @@
 
 {% block content %}
 {% if pins_list %}
-	<div class="pins">
+	<div class="pins" id="pins-list">
+		<div class="pin-sizer"></div>
 		{% for pin in pins_list %}
-			<div class="pin">
-				{% for img in pin.images.all %}
-					<img src="{{ img.url }}" height="136" width="136">
-				{% endfor %}
-				<p>Title: {{ pin.title }}</p>
-				<p >Desc: {{ pin.description }}</p>
-				<p>Likes: {{ pin.like_count }}</p>
-				<a href="{{ pin.link }}">Source</a>
-			</div>
+		<div class="pin" id="pin-id-{{ forloop.counter }}">
+			{% for img in pin.images.all %}
+				<img src="{{ img.url }}" height="136" width="136">
+			{% endfor %}
+			<p>Title: {{ pin.title }}</p>
+			<p>Desc: {{ pin.description }}</p>
+			<p>Likes: {{ pin.like_count }}</p>
+			<a href="{{ pin.link }}">Source</a>
+		</div>
 		{% endfor %}
 	</div>
 {% endif %}
