--- a/pinterest/templates/pinterest/header.html
+++ b/pinterest/templates/pinterest/header.html
@@ -8,8 +8,8 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">
-				<svg class="_mg _5b _mh _25" height="28" width="28" viewBox="0 0 16 16" aria-hidden="true" aria-label="" role="img" data-reactid="17">
+			<a class="logo" href="#">
+				<svg class="_mg _5b _mh _25 pin-logo" height="28" width="28" viewBox="0 0 16 16" aria-hidden="true" aria-label="" role="img" data-reactid="17">
 					<path d="M5.644 15.648C6.39 15.877 7.18 16 8 16a8 8 0 1 0-2.847-.521c-.073-.625-.151-1.655.017-2.378.145-.621.934-3.958.934-3.958s-.238-.477-.238-1.183c0-1.107.642-1.934 1.44-1.934.68 0 1.008.51 1.008 1.122 0 .683-.435 1.705-.66 2.652-.187.792.398 1.439 1.18 1.439 1.416 0 2.504-1.493 2.504-3.647 0-1.907-1.37-3.24-3.327-3.24-2.266 0-3.596 1.7-3.596 3.456 0 .684.264 1.418.593 1.817a.238.238 0 0 1 .055.229c-.06.252-.195.792-.221.903-.035.146-.116.177-.267.107C3.581 10.4 2.96 8.946 2.96 7.778c0-2.512 1.825-4.82 5.262-4.82 2.763 0 4.91 1.97 4.91 4.6 0 2.745-1.73 4.954-4.133 4.954-.807 0-1.566-.42-1.825-.914 0 0-.4 1.52-.496 1.893-.188.722-.71 1.637-1.033 2.157z" data-reactid="19">
 					</path>
 				</svg>
@@ -18,26 +18,26 @@
 
 		<div class="collapse navbar-collapse" id="main-menu">
 			<form class="navbar-form navbar-left">
-				<div class="form-group">
-				  <input type="text" class="form-control" placeholder="Search">
-				</div>
-				<button type="submit" role="search">
-					<svg class="_mg _5h _mh _25" height="20" width="20" viewBox="0 0 16 16" aria-label="Search icon" role="img" data-reactid="30">
+				<button class="search-btn" type="submit" role="search">
+					<svg class="_mg _5h _mh _25 search-icon" height="20" width="20" viewBox="0 0 16 16" aria-label="Search icon" role="img" data-reactid="30">
 						<path d="M6.162 10.035a3.877 3.877 0 0 1-3.873-3.873A3.877 3.877 0 0 1 6.162 2.29a3.877 3.877 0 0 1 3.873 3.872 3.877 3.877 0 0 1-3.873 3.873m9.363 3.196l-3.081-3.08a1.614 1.614 0 0 0-1.23-.468 6.127 6.127 0 0 0 1.11-3.521 6.162 6.162 0 1 0-6.162 6.162 6.13 6.13 0 0 0 3.521-1.109c-.022.442.13.891.467 1.229l3.081 3.081a1.622 1.622 0 0 0 2.294-2.294" data-reactid="32"></path>
 					</svg>
 				</button>
+				<div class="form-group">
+				  <input type="text" class="search-bar" placeholder="What do you want to try?">
+				</div>
 			</form>
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-				<li class="active"><a href="#">Explore</a></li>
-				<li class="active"><a href="#">Melody</a></li>
+				<li class="nav-btns" id="home"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+				<li class="nav-btns" id="explore"><a href="#">Explore</a></li>
+				<li class="nav-btns" id="user"><a href="#">User</a></li>
 			</ul>
 			<button class="notifications-btn" aria-label="Notifications">
-				<svg class="_mg _5h _mh _25" height="24" width="24" viewBox="0 0 16 16" aria-hidden="true" aria-label="" role="img" data-reactid="76">
+				<svg class="_mg _5h _mh _25 notifications-icon" height="24" width="24" viewBox="0 0 16 16" aria-hidden="true" aria-label="" role="img" data-reactid="76">
 					<path d="M11.8 8.586c-.6 0-1-.4-1-.999s.5-.998 1-.998 1 .4 1 .998c0 .6-.5.999-1 .999m-3.8 0c-.6 0-1-.4-1-.999s.5-.998 1-.998 1 .4 1 .998c0 .6-.4.999-1 .999m-3.8 0c-.6 0-1-.4-1-.999s.5-.998 1-.998 1 .4 1 .998c0 .6-.4.999-1 .999M8 0C3.9 0 .5 3.295.5 7.388c0 1.797.6 3.494 1.8 4.792l-.9 3.494c-.1.2.2.4.4.3l3.5-1.698c.9.3 1.8.5 2.7.5 4.1 0 7.5-3.295 7.5-7.388S12.1 0 8 0" data-reactid="78"></path>
 				</svg>
 			</button>
-			<button class="settings-btn collapsed" data-toggle="collapse" data-target="#settings-menu" aria-expanded="false" type="button" aria-label="Settings">
+			<button class="settings-btn collapsed settings-icon" data-toggle="collapse" data-target="#settings-menu" aria-expanded="false" type="button" aria-label="Settings">
 				<svg class="_mg _5h _mh _25" height="22" width="22" viewBox="0 0 16 16" aria-hidden="true" aria-label="" role="img" data-reactid="87"><path d="M14 10a2 2 0 1 1 0-3.999A2 2 0 0 1 14 10zm-6 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm-6 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4z" data-reactid="89"></path></svg>
 			</button>
 			<ul id="settings-menu" class="collapse" style="list-style: none;">
