--- a/pinterest/templates/pinterest/base.html
+++ b/pinterest/templates/pinterest/base.html
@@ -20,8 +20,9 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 	<!-- Bootstrap compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- Masonry for grid layout -->
+	<!-- Vendor scripts -->
 	<script src="https://unpkg.com/masonry-layout@4.2.0/dist/masonry.pkgd.min.js"></script>
+	<script src="{% static 'pinterest/js/infinity.min.js' %}"></script>
 	<!-- Custom scripts -->
 	<script src="{% static 'pinterest/js/index.js' %}"></script>
 </body>
