--- a/pinterest/static/pinterest/css/_variables.scss
+++ b/pinterest/static/pinterest/css/_variables.scss
@@ -10,5 +10,6 @@ $pinterest-black: #000000;
 $mobile-small: 320px;
 $mobile-medium: 480px;
 $tablet: 768px;
-$desktop: 1024px;
-$widescreen: 1440px;
+$desktop-sm: 1024px;
+$desktop-md: 1440px;
+$desktop-lg: 1920px;
