--- a/pinterest/static/pinterest/css/pins.scss
+++ b/pinterest/static/pinterest/css/pins.scss
@@ -2,7 +2,8 @@
 
 .pins {
 	margin: 0 auto;
-
+	position: relative;
+	
 	.pin,
 	.pin-sizer {
 		width: 260px;
@@ -16,5 +17,10 @@
 		margin-top: 20px;
 		overflow-wrap: break-word;
 		padding: 10px;
+
+		.pin-img {
+			max-height: 100%;
+			max-width: 100%;
+		}
 	}
 }
