add infinite scrolling functionality

--- a/pinterest/templates/pinterest/base.html
+++ b/pinterest/templates/pinterest/base.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'pinterest/dist/css/pins.css' %}" />
 	<link rel="stylesheet" type="text/css" href="{% static 'pinterest/dist/css/nav.css' %}" />
-	<link rel="icon" type="image/png" href="{% static 'pinterest/assets/favicon.ico' %}">
+	<link rel="shortcut icon" href="{% static 'pinterest/assets/favicon.ico' %}" />
 	<title>{% block title %} Pinmini {% endblock %}</title>
 </head>
 <body>
