--- a/pinterest/templates/pinterest/index.html
+++ b/pinterest/templates/pinterest/index.html
@@ -16,6 +16,6 @@
 	</div>
 	{% endfor %}
 </div>
-<input type="button" value="Add Pin" class="add-pin" id="add-pin" />
+<!-- <input type="button" value="Add Pin" class="add-pin" id="add-pin" /> -->
 {% endif %}
 {% endblock %}
