testing adding drag and drop functionality

--- a/pinterest/static/pinterest/css/_variables.scss
+++ b/pinterest/static/pinterest/css/_variables.scss
@@ -7,8 +7,8 @@ $pinterest-gray: #efefef;
 $pinterest-black: #000000;
 
 // screen sizes
-$mobile-small: 320px;
-$mobile-medium: 480px;
+$mobile-sm: 320px;
+$mobile-md: 480px;
 $tablet: 768px;
 $desktop-sm: 1024px;
 $desktop-md: 1440px;
