--- a/pinterest/templates/pinterest/base.html
+++ b/pinterest/templates/pinterest/base.html
@@ -6,6 +6,7 @@
 	<!-- Bootstrap compiled and minified CSS -->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'pinterest/dist/css/index.css' %}" />
 	<link rel="stylesheet" type="text/css" href="{% static 'pinterest/dist/css/pins.css' %}" />
 	<link rel="stylesheet" type="text/css" href="{% static 'pinterest/dist/css/nav.css' %}" />
 	<link rel="shortcut icon" href="{% static 'pinterest/assets/favicon.ico' %}" />
@@ -22,7 +23,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- Vendor scripts -->
 	<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+	<script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
+	<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 	<script src="https://unpkg.com/masonry-layout@4.2.0/dist/masonry.pkgd.min.js"></script>
+	<script src="https://unpkg.com/interactjs@1.3.0/dist/interact.min.js"></script>
 	<!-- Custom scripts -->
 	<script src="{% static 'pinterest/js/index.js' %}"></script>
 </body>
