integrated drag-and-drop with infinite scrolling on pins

--- a/pinterest/static/pinterest/css/pins.scss
+++ b/pinterest/static/pinterest/css/pins.scss
@@ -14,7 +14,7 @@
 		box-sizing: border-box;
 		background: $pinterest-gray;
 		color: #555;
-		margin-top: 20px;
+		margin-top: $margin-padding * 2;
 		overflow-wrap: break-word;
 		padding: 10px;
 
