--- a/pinterest/static/pinterest/css/index.scss
+++ b/pinterest/static/pinterest/css/index.scss
@@ -1,12 +1,17 @@
 @import 'variables';
 
 body {
-	padding-top: 60px;
+	padding-top: 80px;
+}
+
+.container {
+	padding: $margin-padding;
+	width: 80%;
 }
 
 #drag-container {
 	margin: 0 auto;
-	max-width: 90%;
+	max-width: 95%;
 
 	.gutter-sizer {
 		width: 0;
@@ -19,43 +24,34 @@ body {
 
 	.widget {
 		float: left;
-		height: 200px;
+		height: 400px;
 
-		.drag-handle {
-			background-color: black;
-			height: 25px;
-			width: 25px;
-			
-			&:hover {
-				cursor: move;
-			}
+		&:hover {
+			cursor: move;
+		}
+
+		&--ht-lg {
+			height: auto;
 		}
 
 	}
-
-	#widget-1 { background-color: blue; }
-
-	#widget-2 { 
-		background-color: red;
-		overflow: scroll;
-	}
-
-	#widget-3 { background-color: green; }
 
 	@media ( min-width: $mobile-md ) {
 		.widget,
 		.grid-sizer {
+			margin-top: $margin-padding * 2;
 			width: 12%; /* fallback if calc isn't supported */
-			width: calc( 100% / 6 );
+			width: calc( 100% / 9 );
 
-			&--lg {
+			&--wd-lg {
+				margin-top: 0;
 				width: 78%;
-				width: calc( 100% / 6 * 3 );
+				width: calc( 100% / 9 * 6 );
 			}
 		}
 
 		.gutter-sizer {
-			width: 10px;
+			width: 5px;
 		}
 	}
 }
