--- a/pinterest/templates/pinterest/pins.html
+++ b/pinterest/templates/pinterest/pins.html
@@ -1,4 +1,4 @@
-<div class="widget widget--ht-lg widget--wd-lg" id="pins-widget">
+<div class="widget widget--ht-lg widget--wd-lg infinite-scroll" id="pins-widget">
 	<div class="pins" id="pins-list">
 		<div class="pin-sizer"></div>
 		{% for pin in pins_list %}
