tested and refactored index.js to leverage external scripts only

--- a/pinterest/static/pinterest/css/_variables.scss
+++ b/pinterest/static/pinterest/css/_variables.scss
@@ -4,6 +4,8 @@ $margin-padding: 15px;
 // colors
 $pinterest-red: #bd081c;
 $pinterest-gray: #efefef;
+$pinterest-gray-hover: #e0e0e0;
+$pinterest-font-black: #211922;
 $pinterest-black: #000000;
 
 // screen sizes
