--- a/pinterest/templates/pinterest/index.html
+++ b/pinterest/templates/pinterest/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-	<button type="button" class="btn btn-info" id="widgets-btn">Add more widgets</button>
+	<button type="button" class="btn" id="widgets-btn">Add more widgets</button>
 </div>
 <div id="drag-container">
 	<div class="grid-sizer"></div>
