--- a/pinterest/templates/pinterest/base.html
+++ b/pinterest/templates/pinterest/base.html
@@ -29,6 +29,7 @@
 	<script src="https://unpkg.com/masonry-layout@4.2.0/dist/masonry.pkgd.min.js"></script>
 	<script src="https://unpkg.com/interactjs@1.3.0/dist/interact.min.js"></script>
 	<!-- Custom scripts -->
+	<script src="{% static 'pinterest/js/drag-and-drop.js' %}"></script>
 	<script src="{% static 'pinterest/js/infinite-scroll.js' %}"></script>
 	<script src="{% static 'pinterest/js/index.js' %}"></script>
 </body>
