update pin styles

--- a/pinterest/static/pinterest/css/_variables.scss
+++ b/pinterest/static/pinterest/css/_variables.scss
@@ -1,5 +1,6 @@
 // spacing
-$margin-padding: 15px;
+$padding: 15px;
+$border-radius: 25px;
 
 // colors
 $pinterest-red: #bd081c;
@@ -7,6 +8,9 @@ $pinterest-gray: #efefef;
 $pinterest-gray-hover: #e0e0e0;
 $pinterest-font-black: #211922;
 $pinterest-black: #000000;
+
+// fonts
+$font-sm: 14px;
 
 // screen sizes
 $mobile-sm: 320px;
