--- a/pinterest/static/pinterest/css/index.scss
+++ b/pinterest/static/pinterest/css/index.scss
@@ -1,12 +1,12 @@
 @import 'variables';
 
 body {
-	padding-top: $margin-padding * 4;
+	padding-top: $padding * 4;
 }
 
 .container {
 	height: 0;
-	margin: $margin-padding auto 0;
+	margin: $padding auto 0;
 	width: 93%;
 
 	#widgets-btn {
@@ -49,7 +49,7 @@ body {
 	@media ( min-width: $mobile-md ) {
 		.widget,
 		.grid-sizer {
-			margin-top: $margin-padding * 2;
+			margin-top: $padding * 2;
 			width: 12%; /* fallback if calc isn't supported */
 			width: calc( 100% / 9 );
 
