add hover effects to pins

--- a/pinterest/static/pinterest/css/_variables.scss
+++ b/pinterest/static/pinterest/css/_variables.scss
@@ -1,6 +1,7 @@
 // spacing
-$padding: 15px;
 $border-radius: 25px;
+$padding: 15px;
+$pin-size: 260px;
 
 // colors
 $pinterest-red: #bd081c;
@@ -8,6 +9,7 @@ $pinterest-gray: #efefef;
 $pinterest-gray-hover: #e0e0e0;
 $pinterest-font-black: #211922;
 $pinterest-black: #000000;
+$pinterest-white: #ffffff;
 
 // fonts
 $font-sm: 14px;
