--- a/pinterest/templates/pinterest/pins.html
+++ b/pinterest/templates/pinterest/pins.html
@@ -3,19 +3,26 @@
 		<div class="pin-sizer"></div>
 		{% for pin in pins_list %}
 		<div class="pin" id="pin-id-{{ forloop.counter }}">
-			{% for img in pin.images.all %}
-				<img class="pin-img" src="{{ img.url }}">
-			{% endfor %}
 			<div class="pin-content">
-				<p class="title">{{ pin.title }}</p>
-				<p class="desc">{{ pin.description }}</p>
-				<p class="likes">
-					<svg class="heart" viewBox="0 0 32 29.6">
-					  <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
-						c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
-					</svg> {{ pin.like_count }} likes
-				</p>
-				<a class="link" href="{{ pin.link }}">Source</a>
+				{% if pin.images %}
+				<div class="pin-content__top">
+					{% for img in pin.images.all %}
+					<img class="pin-img" src="{{ img.url }}" />
+					{% endfor %}
+					<div class="overlay"></div>
+					<p class="pin-desc">{{ pin.description }}</p>
+					<a class="pin-link" href="{{ pin.link }}">Source</a>
+				</div>
+				{% endif %}
+				<div class="pin-content__bottom">
+					<p class="pin-title">{{ pin.title }}</p>
+					<p class="pin-likes">
+						<svg class="heart" viewBox="0 0 32 29.6">
+						  <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
+							c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
+						</svg> {{ pin.like_count }} likes
+					</p>
+				</div>
 			</div>
 		</div>
 		{% endfor %}
