--- a/pinterest/static/pinterest/css/index.scss
+++ b/pinterest/static/pinterest/css/index.scss
@@ -6,7 +6,7 @@ body {
 
 .container {
 	height: 0;
-	margin: $padding * 2 auto;
+	margin: $padding * 2 auto $padding * 4;
 	width: 93%;
 
 	#widgets-btn {
